<resources>
    <string name="app_name">CyDLNA</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">刷新设备</string>
    <string name="main_choise_player">选择播放器</string>
    <string name="main_choise_source">选择媒体库</string>
    <string name="main_choise_file">选择将要播放的媒体文件</string>
    <string name="main_choise_research">重新搜索</string>
    <string name="main_no_player">无播放器</string>
    <string name="main_no_source">无媒体库</string>
    <string name="getresult_stop">结束</string>
    <string name="getresult_return">返回</string>
    <string name="media_stop">Stop</string>
    <string name="media_position">Position</string>
    <string name="media_transport">Transport</string>
    <string name="loading_string">Welcome CyDLNA</string>
    <string name="toastmsg_choise_source">当前无媒体库，请先选择媒体库！</string>
    <string name="toastmsg_choise_player">当前无播放器，请先选择播放器！</string>
    <string name="about_title">关于DLNA遥控器</string>
    <string name="home_set">连接</string>
    <string name="home_main">首页</string>
    <string name="home_live">直播</string>
    <string name="home_local">本地媒体</string>
    <string name="home_control">遥控器</string>
    <string name="local_media">本地资源</string>
    <string name="local_video">视频</string>
    <string name="local_audio">音乐</string>
    <string name="local_picture">图片</string>
    <string name="cancel">取消</string>
    <string name="connect">连接</string>
    <string name="forget">忘记</string>
    <string name="device_searching">　搜索设备中...</string>
    <string name="auto_play">自动播放</string>
    <string name="version">当前版本：</string>
    <string name="connect_us">联系我们：zll_2612@sina.cn</string>
    <string name="sky_menu_check_update">检查更新</string>
    <string name="sky_menu_about">关于</string>
    <string name="password">密码：</string>
    <string name="password_saved">密码已保存，可以直接连接。</string>
    <string name="dongle_connect">Dongle连接</string>
    <string name="dongle_wifi_setting">Dongle Wifi设置</string>
    <string name="dongle_list_empty">列表为空</string>
    <string name="searching">正在搜索设备...</string>
    <string name="time_0">00:00:00</string>
    <string name="control">遥控器</string>
    <string name="playtime">02:22</string>
    <string name="playtime_1">/</string>
    <string name="input">手动输入</string>
    <string name="exit">退出扫描</string>
    <string name="refresh">刷新</string>
    <string name="home_searching">搜索设备中进度</string>
    <string name="share_refresh">刷新设备</string>
    <string name="share_stop">关闭退出</string>
    <string name="share_prompt">请选择设备进行推送：</string>
    <string name="dongle">天赐棒</string>
    <string name="choose_dongle">设备ID</string>
    <string name="dongle_connect_stat">连接状态</string>
    <string name="wlan_nearby">附近的WLAN</string>
    <string name="choose_wifi">为天赐棒配置网络</string>
    <string name="search_text">正在搜索天赐棒...</string>
    <string name="search_ap">正在搜索Wifi列表...</string>
    <string name="ap_saved">已保存</string>
    <string name="ap_connected">已连接</string>
    <string name="version_check">版本更新</string>
    <string name="sky_about">关于</string>
    <string name="sky_about_detail">功能介绍：使用本软件，你可以浏览爱奇艺、优酷、乐视、腾讯、搜狐等各大视频网站的优秀资源，推送电视直播和本地资源到你的dlna设备。</string>
    <string name="sky_about_disclaimer">免责声明：本软件提供的影视、电视台资源均来自原始视频网站，内容版权归各视频网站、电视台及版权方所有。本软件不存储，不修改电视台节目内容。电视节目视频数据流也不经由本公司服务器中转或存储。</string>
    <string name="get_recommend">正在加载...</string>
    <string name="get_recommend_over">没有影片了</string>
    <string name="device_connect">设备连接</string>
    <string name="net_config">网络设置</string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_back">返回</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_clipboard_empty">清空剪切板</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨号</string>
    <string name="button_done">完成</string>
    <string name="button_email">发送email</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_google_shopper">谷歌购物</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_read_book">浏览本书</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_location">地理坐标</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="menu_about">关于</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史</string>
    <string name="menu_share">分享</string>
    <string name="msg_about">基于ZXing开源条码引擎</string>
    <string name="msg_buggy">此设备存在已知问题，将导致条码扫描器出错。更多信息，请访问 http://code.google.com/p/zxing/wiki/FrequentlyAskedQuestions</string>
    <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_contents">内容</string>
    <string name="msg_default_format" />
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_barcode_failed">无法生成条码。</string>
    <string name="msg_encode_contents_failed">无法根据已有数据生成条码。</string>
    <string name="msg_google_shopper_missing">谷歌购物未安装</string>
    <string name="msg_install_google_shopper">谷歌购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_loading_apps">加载应用名单…</string>
    <string name="msg_not_our_results">您将离开此应用程序，得到的搜索结果与此应用程序无关</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">无页面返回</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_searching_book">搜索图书…</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_sbc_unknown_page">未知页面</string>
    <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_share_text">或键入一些文字</string>
    <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">扫描 一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_reverse_image_summary">设备上启用了前置摄像头只</string>
    <string name="preferences_reverse_image_title">反转摄像机的图像</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="result_calendar">找到日历事件</string>
    <string name="result_email_address">找到email地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="result_product" />
    <string name="result_sms">找到短信地址</string>
    <string name="result_tel">找到电话号码</string>
    <string name="result_text" />
    <string name="result_uri">找到URL</string>
    <string name="result_wifi">发现网络配置</string>
    <string name="sbc_name">Google图书搜索</string>
    <string name="share_name">通过条码分享</string>
    <string name="title_about">条码扫描器</string>
    <string name="wa_name">网络配置</string>
    <string name="wifi_changing_network">不稳定的网络</string>
    <string name="wifi_connect_failed">网络连接失败</string>
    <string name="wifi_connected">已连接</string>
    <string name="wifi_creating_network">创建网络</string>
    <string name="wifi_modifying_network">修改网络</string>
    <string name="wifi_ssid_label">网络SSID</string>
    <string name="wifi_ssid_missing">未找到SSID名称</string>
    <string name="wifi_type_incorrect">网络类型不正确</string>
    <string name="wifi_type_label">类型</string>
    <string name="zxing_url">http://code.google.com/p/zxing</string>
    <string name="live_title">直播</string>
    <string name="live_collection">收藏</string>
    <string name="live_no_data">无数据</string>
    <string name="has_push">已推送</string>
    <string name="pwd_setting_success">修改成功，新的密码将在酷开影棒下次启动时生效</string>
    <string name="search_title">搜索</string>
    <string name="search_default">影片/节目名</string>
    <string name="search_recommend_title">精彩推荐</string>
    <string name="search_history_title">搜索历史</string>
    <string name="search_clear_history_title">清空历史</string>
    <string name="search_hitory_empty_title">暂无搜索历史</string>
    <string name="actor">主演:</string>
    <string name="score">评分:</string>
    <string name="remote_title">遥控器</string>
    <string name="push_start">推送</string>
    <string name="push_end">终止推送</string>
    <string name="unknown">未知影片</string>
    <string name="detail">详情</string>
    <string name="series">剧集</string>
    <string name="loadding">加载中</string>
    <string name="address_fail">播放地址失效，请重试！</string>
    <string name="xlistview_footer_hint_loading">正在载入...</string>
    <string name="about">Dlna遥控器</string>
    <string name="sereis_title">聚合资源</string>
    <string name="resource">资源</string>
    <string name="history">观看历史</string>
    <string name="empty_history">观看历史为空</string>
    <string name="history_detail">上次观看到第 %1$d 集</string>
    <string name="clear_all">全部删除</string>
    <string name="edit">编辑</string>
    <string name="no_dongle">没有搜索到dongle</string>
    <string name="no_wifi">没有搜索到Wifi</string>
    <string name="remote_image">图片遥控器</string>
    <string name="remote_movie">视频遥控器</string>
    <string name="remote_music">音乐遥控器</string>
    <string name="rs_unknow">未知</string>
</resources>