<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/btSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:onClick="onClick"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/source"
            android:text="@string/main_choise_source"
            android:textColor="@color/ivory"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvShowSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_no_source"
            android:textColor="@color/ivory"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:onClick="onClick"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/player"
            android:text="@string/main_choise_player"
            android:textColor="@color/ivory"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvShowPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_no_player"
            android:textColor="@color/ivory"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:onClick="onClick"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/media_files1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/media_files3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/media_files2" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_choise_file"
            android:textColor="@color/ivory"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>